# local-docs-ai-assistant

./: .env.sample  .gitignore  README.md  load_data.py  pyproject.toml  rag_chatbot.py
